--- a/FXExperienceTools/src/main/resources/styles/preview.css
+++ b/FXExperienceTools/src/main/resources/styles/preview.css
@@ -10,7 +10,9 @@ different terms and without source code for the larger work.
     Created on : May 8, 2017, 12:05:37 AM
     Author     : andje22
 */
-
+.root {
+     -fx-font-family: "MS Gothic";
+}
 #Preview-area {
      -fx-background-image: url("/images/background.png");
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );
